[Styling] Minor container tweaks for overflow issue with dropdown

--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -137,7 +137,7 @@ pre {
 }
 
 .rw-multiselect .rw-popup, .rw-dropdown-list .rw-popup {
-    max-height: 130px !important;
+    max-height: 136px !important;
 }
 
 .rw-list-optgroup {
